fix flicker text slide

--- a/components/Gallery.module.scss
+++ b/components/Gallery.module.scss
@@ -33,12 +33,6 @@
 			//width: 100%;
 			height: 100vh;
 			cursor: pointer;
-			.image {
-				max-height: 100vh;
-				min-height: 100vh;
-				object-fit: cover;
-			}
-		
 			&.nav {
 				//opacity: 0.8;
 			}
@@ -72,7 +66,13 @@
 	}
 }
 
-.text{
+.imageSlide {
+	max-height: 100vh;
+	min-height: 100vh;
+	object-fit: cover;
+}
+
+.textSlide{
 	position: relative;
 	display: block;
 	min-width: 80vw;
@@ -80,8 +80,6 @@
 	min-height: 100vh;
 	user-select: none;
 	background-color: #fff;
-	
-	
 	.content{
 		position: absolute;
 		top:0;
@@ -101,11 +99,10 @@
 		bottom:0;
 		width: 100%;
 		text-align: center;
-		padding:$space;
-		//padding:$space;
+		padding:$space/2;
 	}
 }
-.video {
+.videoSlide {
 	position: relative;
 	max-height: 100vh;
 	min-height: 100vh;
